--- a/style.css
+++ b/style.css
@@ -109,7 +109,14 @@ footer {
   background-color: #f0f0f0;
   color: #000;
 }
-  
+
+.berita {
+  background-color: white;
+  border: 2px solid #316ac5;
+  padding: 15px;
+  margin: 20px;
+  box-shadow: inset -1px -1px #fff, inset 1px 1px #888;
+}
 /************************************************************
 📁 Optional Extra (boleh hidupkan kalau nak nostalgia GILA)
 ************************************************************/
